added vids + edits

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,7 +2,7 @@
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
                 <div class="skillset">
                     <div class="item">
-                        <h3 class="level-title">Mixing</h3>
+                        <h3 class="level-title">Mixing & Mastering</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="98%">
                             </div>
@@ -10,7 +10,7 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Mastering</h3>
+                        <h3 class="level-title">Music Producing</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="98%">
                             </div>
@@ -18,7 +18,7 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Composing</h3>
+                        <h3 class="level-title">Audio Editing</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="98%">
                             </div>
@@ -28,23 +28,23 @@
                     <div class="item">
                         <h3 class="level-title">Recording & Tracking</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="95%">
+                            <div class="level-bar-inner" data-level="92%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Songwriting</h3>
+                        <h3 class="level-title">Video Production</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="85%">
+                            <div class="level-bar-inner" data-level="80%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Sound Design</h3>
+                        <h3 class="level-title">Programming & Design</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="60%">
+                            <div class="level-bar-inner" data-level="80%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
