4-24-17 update career profile

--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -1,6 +1,6 @@
 <section class="section summary-section">
 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
 <div class="summary">
-    <p>Jake has been a musician since 5 years old, playing piano and violin.  He got his start with audio engineering in high school, operating a mobile studio recording local bands and talent.  For the past 10 years he has been collaborating with artists writing original songs, throwing events, and experimenting with new methods of performance.  Throughout school he has worked multiple freelance jobs in the music industry, ultimately maintaining a prized position operating Front-of-House for UC San Diego's tech services.  Now that he has earned his degrees, he is looking for freelance opportunities in both music production and audio engineering fields.</p>
+    <p>Jake has been a musician since 5 years old, playing piano and violin.  He got his start with audio engineering in high school, operating a mobile studio recording local bands and talent.  For the past 10 years he has been collaborating with artists writing original songs, throwing events, and experimenting with new methods of performance.  Throughout school he has worked multiple freelance jobs in the music industry, ultimately maintaining a prized position operating Front-of-House for UC San Diego's tech services.  Now that he has earned his degrees, he is looking for opportunities in both music production and audio engineering fields.</p>
 </div><!--//summary-->
 </section><!--//section-->
