--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -5,6 +5,19 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Live Sound Technician</h3>
+                            <div class="time">2015 - 2016</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Still Listening Productions</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>Set up and soundchecked small and medium sound systems for DJs/Performers, as well as managing gear transitions during events.  Responsible for tranporting gear to and from venue.</p>
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Live Sound Technician</h3>
                             <div class="time">2012 - 2016</div>
                         </div><!--//upper-row-->
                         <div class="company">UC San Diego Tech Services</div>
@@ -23,7 +36,7 @@
                         <div class="company">Jeff Trott (Producer for Sheryll Crow, Stevie Nicks)</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Assistant engineer work for professional producer (Sheryl Crow, Stevie Nicks).  Responsible for editing/tuning vocal tracks, instrument sound design, and studio set-up</p>
+                        <p>Assistant engineer work for professional producer (Sheryl Crow, Stevie Nicks).  Experience with editing/tuning vocal tracks, instrument sound design, and studio set-up</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
