updated experience and carreer profile 2

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -23,7 +23,7 @@
                         <div class="company">UC San Diego Tech Services</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Responsible for live mixing bands and DJs while operating front-of-house.  Managed monitoring and stage transitions during events.</p>
+                        <p>Responsible for live mixing bands and DJs while operating front-of-house.  Managed monitoring and stage transitions during events, including crew management for setup and strike shifts.</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
