--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,26 +1,22 @@
----
-layout: compress
----
 <!DOCTYPE html>
-<!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->  
-<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
-<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
-{% include head.html %}
+<html>
+    {% include head.html %}
+    <body id="page-top" class="index">
+    {% include nav.html %}
+    {% include header.html %}
+    {% include portfolio_grid.html %}
+    {% include about.html %}
 
-<body>
-    <div class="wrapper">
-        {% include sidebar.html %}
-        
-        <div class="main-wrapper">
-           
-           {{content}}
-            
-        </div><!--//main-body-->
-    </div>
- 
-{% include footer.html %}
- 
-{% include scripts.html %}
-</body>
-</html> 
+    {% if site.contact == "static" %}
+    {% include contact_static.html %}
+    {% elsif site.contact == "disqus" %}
+    {% include contact_disqus.html %}
+    {% else %}
+    {% include contact.html %}
+    {% endif %}
 
+    {% include footer.html %}
+    {% include modals.html %}
+    {% include js.html %}
+    </body>
+</html>
