--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -204,6 +204,7 @@ section.success {
     position: relative;
     margin: 0 auto;
     max-width: 400px;
+    box-shadow: 0px 1px 8px #888888;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption {
@@ -215,6 +216,7 @@ section.success {
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
+    box-shadow: 0px 1px 8px #888888;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption:hover {
