--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,11 +8,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Jake P Schneider has been designing websites and graphics from a young age.  In High School he started his first web design company, delivering professional websites to local businesses and schools.</p>
+                <div class="col-lg-4 col-lg-offset-2 text-center">
+                    <p>Jacob P Schneider has been designing websites and graphics from a young age.</p>
                 </div>
-                <div class="col-lg-4">
-                    <p>Whether you're an individual artist or designer that needs to showcase your work, or a company looking to attract clients, contact Jake to fill all of your web service needs.</p>
+                <div class="col-lg-4 text-center">
+                    <p>He aims to create stunning graphics that both fit the needs of the business and enitice consumers.</p>
                 </div>
             </div>
         </div>
