--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
                     <p>Jacob P Schneider has been designing websites and graphics from a young age.</p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <p>He aims to create stunning graphics that both fit the needs of the business and enitice consumers.</p>
+                    <p>He aims to create stunning designs that fit the needs of the business and enitice consumers.</p>
                 </div>
             </div>
         </div>
