--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -48,13 +48,13 @@ hr.star-primary {
 
 hr.star-light:after,
 hr.star-primary:after {
-    content: "\f005";
+    content: "\f078";
     display: inline-block;
     position: relative;
     top: -.8em;
     padding: 0 .25em;
     font-family: FontAwesome;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 hr.star-light {
@@ -132,7 +132,7 @@ header .intro-text .skills {
     }
 
     .navbar-fixed-top .navbar-brand {
-        font-size: 2em;
+        font-size: 2.2em;
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
         transition: all .3s;
@@ -161,6 +161,15 @@ header .intro-text .skills {
     letter-spacing: 1px;
 }
 
+.navbar .navbar-nav li a {
+    color: #{{ site.color.primary }};
+}
+
+.navbar-default .navbar-nav .active a {
+    background: #fff !important;
+    color: #{{ site.color.primary }};
+}
+
 .navbar .navbar-nav li a:focus {
     outline: 0;
 }
@@ -168,6 +177,11 @@ header .intro-text .skills {
 .navbar-default,
 .navbar-inverse {
     border: 0;
+    background: #fff;
+}
+
+.navbar-default .navbar-brand {
+    color: #{{ site.color.secondary }};
 }
 
 section {
@@ -176,7 +190,7 @@ section {
 
 section h2 {
     margin: 0;
-    font-size: 3em;
+    font-size: 2em;
 }
 
 section.success {
@@ -199,7 +213,7 @@ section.success p {
 }
 
 #portfolio h2 {
-  margin: 40px 0 30px;
+  margin-top: 40px;
 }
 
 #portfolio .portfolio-item {
@@ -415,6 +429,7 @@ footer .footer-below {
 
 .portfolio-modal .modal-content img {
     margin-bottom: 30px;
+    border: 1px solid #DDD;
 }
 
 .portfolio-modal .modal-content .item-details {
