--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Design - UI - UX</h2>
-                    <!-- <hr class="star-primary"> -->
+                    <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
