--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -38,11 +38,11 @@ h6 {
 
 hr.star-light,
 hr.star-primary {
-    margin: 25px auto 30px;
+    margin: 25px auto 55px;
     padding: 0;
-    max-width: 250px;
+    max-width: 190px;
     border: 0;
-    border-top: solid 5px;
+    border-top: solid 2px;
     text-align: center;
 }
 
@@ -51,10 +51,10 @@ hr.star-primary:after {
     content: "\f078";
     display: inline-block;
     position: relative;
-    top: -.8em;
+    top: -.85em;
     padding: 0 .25em;
     font-family: FontAwesome;
-    font-size: 1.5em;
+    font-size: 1em;
 }
 
 hr.star-light {
@@ -198,7 +198,8 @@ section {
 
 section h2 {
     margin: 0;
-    font-size: 2em;
+    font-size: 1.5em;
+    font-weight: 100;
 }
 
 section.success {
@@ -221,7 +222,7 @@ section.success p {
 }
 
 #portfolio h2 {
-  margin-top: 40px;
+  margin-top: 80px;
 }
 
 #portfolio .portfolio-item {
@@ -235,7 +236,7 @@ section.success p {
     margin: 0 auto;
     max-width: 400px;
     box-shadow: 0px 1px 8px #888888;
-    max-height: 250px;
+    height: 260px;
     overflow: hidden;
 }
 
@@ -277,6 +278,21 @@ section.success p {
 
 #portfolio * {
     z-index: 2;
+}
+
+#portfolio .img-responsive {
+    height: auto;
+    width: 480px;
+    max-width: none;
+}
+
+.post-content {
+    margin-top: 100px;
+}
+
+.post-content h2 {
+    font-weight: 400;
+    font-size: 1.5em;
 }
 
 @media(min-width:767px) {
