--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -14,8 +14,9 @@
                         <div class="modal-body">
                             <h2>{{ post.title }}</h2>
                             <hr class="star-primary">
+                            <p>{{ post.description | newline_to_br }}</p>
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                            <p>{{ post.description }}</p>
+                            <p>{{ post.description2 | newline_to_br }}</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong>{{ post.client }}
