--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,7 @@
     <body id="page-top" class="index">
     {% include nav.html %}
 
-    {% include portfolio_grid.html %}
-    {% include about.html %}
+    {% include post-content.html %}
 
     {% if site.contact == "static" %}
     {% include contact_static.html %}
