--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }} - Designer & Developer Portfolio{% endif %}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     {% if site.meta_author %}<meta name="author" content="{{ site.meta_author }}">{% endif %}
