--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Design - UI - UX</h2>
+                    <h2>Dev - Design - UI/UX</h2>
                     <hr class="star-primary">
                 </div>
             </div>
