--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -75,6 +75,11 @@ hr.star-primary:after {
     background-color: #fff;
 }
 
+.nopadding {
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
 .img-centered {
     margin: 0 auto;
 }
@@ -145,6 +150,10 @@ header .intro-text .skills {
     .navbar-fixed-top.navbar-shrink .navbar-brand {
         font-size: 1.5em;
     }
+
+    .navbar-fixed-top.navbar-shrink . {
+        font-size: 0.7em;
+    }
 }
 
 .navbar {
@@ -159,6 +168,11 @@ header .intro-text .skills {
 
 .navbar .navbar-nav {
     letter-spacing: 1px;
+}
+
+.navbar .navbar-nav.navbar-right {
+    top: 8px;
+    position: relative;
 }
 
 .navbar .navbar-nav li a {
@@ -192,12 +206,36 @@ header .intro-text .skills {
     color: #{{ site.color.secondary }};
 }
 
+.navbar-default .sub-title {
+    display: block;
+    position: relative;
+    left: 35px;
+    bottom: 10px;
+    font-size: 1em;
+    font-weight: 400;
+}
+@media (max-width: 768px) {
+    .navbar-default .sub-title {
+        display: inline-block;
+        font-size: 0.7em;
+        bottom: 20px;
+    }
+}
+
 .navbar-default .navbar-toggle .icon-bar {
     background-color: #{{ site.color.secondary }};
 }
 
 section {
     padding: 100px 0;
+}
+section#portfolio {
+    padding: 100px 0 0;
+}
+@media (max-width: 768px) {
+    section#portfolio {
+        padding: 80px 0 0;
+    }
 }
 
 section h2 {
@@ -238,9 +276,7 @@ section.success p {
     display: block;
     position: relative;
     margin: 0 auto;
-    max-width: 400px;
-    box-shadow: 0px 1px 8px #888888;
-    height: 260px;
+    height: 50vh;
     overflow: hidden;
 }
 
@@ -286,12 +322,11 @@ section.success p {
 
 #portfolio .img-responsive {
     height: auto;
-    width: 480px;
     max-width: none;
 }
 
 .post-content {
-    margin-top: 100px;
+    margin-top: 150px;
 }
 
 .post-content h2 {
@@ -508,4 +543,11 @@ footer .footer-below {
 .modal.fade.in {
     transform: translateZ(0);
     -webkit-transform: translateZ(0);
+}
+
+/* XL screens */
+@media (min-width: 2120px) {
+    #portfolio .img-responsive {
+        width: 100%;
+    }
 }
