--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
    <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
+        <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -10,6 +10,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="../">{{ site.title }}</a>
+                <a href="../"><span class="sub-title">Shopify - Wordpress - Graphic Design</span></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
