--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -1,20 +1,14 @@
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Dev - Design - UI/UX</h2>
-                    <hr class="star-primary">
-                </div>
-            </div>
+        <div class="container-fluid">
             <div class="row">
                 {% for post in site.posts %}
-                    <div class="col-sm-4 portfolio-item">
+                    <div class="col-sm-6 portfolio-item  nopadding">
                         <a href="{{ post.permalink }}" class="portfolio-link">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
+                                    {{ post.title }}
                                 </div>
                             </div>
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
